Implement order processing features and validations
- Added `IPlaceOrderService` and order validators in `ServiceRegister.cs`.
- Introduced new validation constants in `ResourceKeys.cs`.
- Updated resource files for order-related messages.
- Modified `DatabaseRegister.cs` to use PostgreSQL.
- Enhanced `ErpDbContext` with a new `DbSet<Order>`.
- Created `OrderController` for handling order placement requests.
- Developed unit tests for `PlaceOrderService`.
- Implemented mapping profiles in `OrderProfile.cs`.
- Added validators for order-related DTOs.
- Defined new entities: `Order`, `OrderItem`, `OrderPayment`, and `Discount`.
- Created migration files for new order-related tables.

--- a/Erp.Domain/Resources/SharedResource.tr.resx
+++ b/Erp.Domain/Resources/SharedResource.tr.resx
@@ -83,6 +83,9 @@
   <data name="TaxNumberAlreadyExists" xml:space="preserve">
     <value>Bu vergi numarası zaten kullanılmaktadır</value>
   </data>
+  <data name="OrderPlacementError" xml:space="preserve">
+    <value>Sipariş oluşturulurken bir hata oluştu</value>
+  </data>
   
   <!-- Validation Messages -->
   <data name="RequiredField" xml:space="preserve">
@@ -99,6 +102,32 @@
   </data>
   <data name="InvalidTaxNumber" xml:space="preserve">
     <value>Geçersiz vergi numarası</value>
+  </data>
+  
+  <!-- Order Validation Messages -->
+  <data name="OrderItemsRequired" xml:space="preserve">
+    <value>Siparişte en az bir ürün olmalıdır</value>
+  </data>
+  <data name="PaymentsRequired" xml:space="preserve">
+    <value>Siparişte en az bir ödeme olmalıdır</value>
+  </data>
+  <data name="ProductRequired" xml:space="preserve">
+    <value>Ürün seçimi zorunludur</value>
+  </data>
+  <data name="QuantityGreaterThanZero" xml:space="preserve">
+    <value>Miktar sıfırdan büyük olmalıdır</value>
+  </data>
+  <data name="TotalAmountNotNegative" xml:space="preserve">
+    <value>Toplam tutar negatif olamaz</value>
+  </data>
+  <data name="PaymentAmountGreaterThanZero" xml:space="preserve">
+    <value>Ödeme tutarı sıfırdan büyük olmalıdır</value>
+  </data>
+  <data name="PaymentMethodRequired" xml:space="preserve">
+    <value>Ödeme yöntemi seçimi zorunludur</value>
+  </data>
+  <data name="InvalidPaymentMethod" xml:space="preserve">
+    <value>Geçersiz ödeme yöntemi</value>
   </data>
   
   <!-- Success Messages -->
