--- a/Erp.Domain/Resources/SharedResource.en.resx
+++ b/Erp.Domain/Resources/SharedResource.en.resx
@@ -83,6 +83,9 @@
   <data name="TaxNumberAlreadyExists" xml:space="preserve">
     <value>This tax number is already in use</value>
   </data>
+  <data name="OrderPlacementError" xml:space="preserve">
+    <value>An error occurred while placing the order</value>
+  </data>
   
   <!-- Validation Messages -->
   <data name="RequiredField" xml:space="preserve">
@@ -99,6 +102,32 @@
   </data>
   <data name="InvalidTaxNumber" xml:space="preserve">
     <value>Invalid tax number</value>
+  </data>
+  
+  <!-- Order Validation Messages -->
+  <data name="OrderItemsRequired" xml:space="preserve">
+    <value>Order must have at least one item</value>
+  </data>
+  <data name="PaymentsRequired" xml:space="preserve">
+    <value>Order must have at least one payment</value>
+  </data>
+  <data name="ProductRequired" xml:space="preserve">
+    <value>Product is required</value>
+  </data>
+  <data name="QuantityGreaterThanZero" xml:space="preserve">
+    <value>Quantity must be greater than zero</value>
+  </data>
+  <data name="TotalAmountNotNegative" xml:space="preserve">
+    <value>Total amount cannot be negative</value>
+  </data>
+  <data name="PaymentAmountGreaterThanZero" xml:space="preserve">
+    <value>Payment amount must be greater than zero</value>
+  </data>
+  <data name="PaymentMethodRequired" xml:space="preserve">
+    <value>Payment method is required</value>
+  </data>
+  <data name="InvalidPaymentMethod" xml:space="preserve">
+    <value>Invalid payment method</value>
   </data>
   
   <!-- Success Messages -->
