Add raw material management service and related features
- Implemented a new service for managing raw materials, including creation, updating, retrieval, and deletion.
- Introduced DTOs for raw material operations: `RawMaterialCreateDto`, `RawMaterialUpdateDto`, and `RawMaterialDto`.
- Created exceptions for handling specific error scenarios: `RawMaterialNameAlreadyExistsException`, `RawMaterialBarcodeAlreadyExistsException`, and `RawMaterialExistInFormulaException`.
- Updated `ServiceRegister` to include `IRawMaterialService`.
- Modified resource keys in `ResourceKeys.cs` for raw material messages.
- Added localization entries in `SharedResource.en.resx` and `SharedResource.tr.resx`.
- Created `RawMaterialController` for handling HTTP requests related to raw materials.
- Added a mapping profile (`RawMaterialProfile`) for DTO and entity mapping using AutoMapper.
- Enhanced `RawMaterialService` with business logic for raw material operations.

--- a/Erp.Domain/Resources/SharedResource.en.resx
+++ b/Erp.Domain/Resources/SharedResource.en.resx
@@ -107,6 +107,15 @@
   <data name="RawMaterialNotFound" xml:space="preserve">
     <value>Raw material not found</value>
   </data>
+  <data name="RawMaterialNameAlreadyExists" xml:space="preserve">
+    <value>This raw material name is already in use in your company</value>
+  </data>
+  <data name="RawMaterialBarcodeAlreadyExists" xml:space="preserve">
+    <value>This barcode is already in use in your company</value>
+  </data>
+  <data name="RawMaterialExistInFormula" xml:space="preserve">
+    <value>This raw material cannot be deleted because it is used in product formulations</value>
+  </data>
   <data name="UnitTypeMismatch" xml:space="preserve">
     <value>Cannot convert between different unit types</value>
   </data>
