Add product formula functionality and related tests
- Introduced `IUnitService` for unit conversions in order processing.
- Enhanced `PlaceOrderService` to manage stock reduction based on product formulas.
- Created `ProductFormulaController` and `ProductFormulaService` for CRUD operations.
- Updated DTOs to include `ProductFormulaId` and added new constants for error messages.
- Implemented migration to add `CompanyId` to `ProductFormulas`.
- Added unit tests to ensure functionality and error handling for product formulas.

--- a/Erp.Domain/Resources/SharedResource.en.resx
+++ b/Erp.Domain/Resources/SharedResource.en.resx
@@ -116,6 +116,15 @@
   <data name="RawMaterialExistInFormula" xml:space="preserve">
     <value>This raw material cannot be deleted because it is used in product formulations</value>
   </data>
+  <data name="ProductFormulaNotFound" xml:space="preserve">
+    <value>Product formula not found</value>
+  </data>
+  <data name="ProductFormulaNameAlreadyExists" xml:space="preserve">
+    <value>This product formula name is already in use in your company</value>
+  </data>
+  <data name="ProductFormulaUsedByProduct" xml:space="preserve">
+    <value>This product formula cannot be deleted because it is used by products</value>
+  </data>
   <data name="UnitTypeMismatch" xml:space="preserve">
     <value>Cannot convert between different unit types</value>
   </data>
