Add Supplier management functionality
- Introduced `SupplierService` and `ISupplierService` for handling supplier operations (create, update, delete, retrieve).
- Added DTOs for supplier data transfer: `SupplierCreateDto`, `SupplierUpdateDto`, `SupplierDto`, and `RawMaterialSupplierDto`.
- Implemented exception handling for supplier-related errors.
- Enhanced `RawMaterialService` to manage raw material-supplier associations.
- Updated `RawMaterial` and `Supplier` entities with navigation properties.
- Registered new services in `ServiceRegister` for dependency injection.
- Added unit tests for supplier and raw material service functionalities.
- Updated localization resources for supplier-related messages.
- Modified `ErpDbContext` to include new DbSet properties for `Supplier` and `RawMaterialSupplier`.
- Refactored existing code to integrate new supplier functionality.

--- a/Erp.Domain/Resources/SharedResource.en.resx
+++ b/Erp.Domain/Resources/SharedResource.en.resx
@@ -125,6 +125,36 @@
   <data name="ProductFormulaUsedByProduct" xml:space="preserve">
     <value>This product formula cannot be deleted because it is used by products</value>
   </data>
+  <data name="SupplierNotFound" xml:space="preserve">
+    <value>Supplier not found</value>
+  </data>
+  <data name="SupplierNameAlreadyExists" xml:space="preserve">
+    <value>Supplier with this name already exists</value>
+  </data>
+  <data name="SupplierTaxNumberAlreadyExists" xml:space="preserve">
+    <value>Supplier with this tax number already exists</value>
+  </data>
+  <data name="SupplierHasRawMaterials" xml:space="preserve">
+    <value>Cannot delete supplier with associated raw materials</value>
+  </data>
+  <data name="RawMaterialNotAssociatedWithSupplier" xml:space="preserve">
+    <value>Raw material is not associated with this supplier</value>
+  </data>
+  <data name="RawMaterialAlreadyAssociatedWithSupplier" xml:space="preserve">
+    <value>This raw material is already associated with this supplier</value>
+  </data>
+  <data name="SupplierDeleted" xml:space="preserve">
+    <value>Supplier deleted successfully</value>
+  </data>
+  <data name="RawMaterialAddedToSupplier" xml:space="preserve">
+    <value>Raw material added to supplier successfully</value>
+  </data>
+  <data name="RawMaterialRemovedFromSupplier" xml:space="preserve">
+    <value>Raw material removed from supplier successfully</value>
+  </data>
+  <data name="RawMaterialPriceUpdated" xml:space="preserve">
+    <value>Raw material price updated successfully</value>
+  </data>
   <data name="UnitTypeMismatch" xml:space="preserve">
     <value>Cannot convert between different unit types</value>
   </data>
